Pipeline manifest: change format, update loading function

--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -1,4 +1,4 @@
 measurements:
-  - PixelAverage:
-  - HaralickTexture:
-      clip_cell_borders: yes
+  - module: PixelAverage
+  - module: HaralickTexture
+    clip_cell_borders: yes
