Implement a Granularity measurement

--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -2,3 +2,5 @@ measurements:
   - module: PixelAverage
   - module: HaralickTexture
     clip_cell_borders: yes
+  - module: Granularity
+    clip_cell_borders: yes
