Add manifest-configurable feature-vector post-processing

--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -4,3 +4,7 @@ measurements:
     clip_cell_borders: yes
   - module: Granularity
     clip_cell_borders: yes
+
+postprocessing:
+  normalize: yes
+  fill_nans: yes
