Make EdgeIntensityRatio.options.border_width vectorizable

--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -3,6 +3,8 @@ measurements:
   - module: HaralickTexture
   - module: Granularity
   - module: EdgeIntensityRatio
+    border_width: [10, 15, 20, 25]
+
 
 preprocessing:
   equalization:
