Enable all modules

--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -1,9 +1,9 @@
 measurements:
-  # - module: PixelAverage
-  # - module: HaralickTexture
-  # - module: Granularity
-  # - module: EdgeIntensityRatio
-  #   border_width: [10, 15, 20, 25]
+  - module: PixelAverage
+  - module: HaralickTexture
+  - module: Granularity
+  - module: EdgeIntensityRatio
+    border_width: [10, 15, 20, 25]
   - module: EulerNumber
 
 
